Fix permanents border being cut off by overflow

--- a/src/routes/game/components/zones/permanentsZone/PermanentsZone.module.css
+++ b/src/routes/game/components/zones/permanentsZone/PermanentsZone.module.css
@@ -30,6 +30,7 @@
   overflow-y: clip;
   display: flex;
   align-items: flex-end;
+  padding: 4px;
 }
 
 .permanentsInner::-webkit-scrollbar {
